<resources>
    <string name="app_name">Mis Conciertos</string>
    <string name="nombre">Nombre Artista</string>
    <string name="fecha">Fecha Evento</string>
    <string name="genero">Genero Musical</string>
    <string name="valor">Valor Entrada</string>
    <string name="nota">Calificación</string>
    <string name="agregarBtn">Registrar Evento</string>
    <string name="lista">Eventos Registrados</string>
    <string name="limpiar">Limpiar</string>
</resources>