<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >
   <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="@dimen/marginTopBase"
     android:orientation="horizontal"
     android:background="@color/colorSecundary"
     >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:gravity="center"
        android:layout_weight="2"
        android:textSize="@dimen/tamanioLetra2"


    ></TextView>
    <EditText
        android:id="@+id/nombreTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"


        >

    </EditText>

   </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopBase"
        android:orientation="horizontal"
        android:background="@color/colorSecundary"

        >
        <TextView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/fecha"
            android:textSize="@dimen/tamanioLetra2"

        ></TextView>

        <EditText
            android:id="@+id/fechaTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Ingrese Fecha"
            >

        </EditText>
        <!--<DatePicker
            android:id="@+id/fechaDp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/altoDatePicker"
            android:layout_weight="1"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            >

        </DatePicker>-->


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopBase"
        android:background="@color/colorSecundary"
        android:orientation="horizontal"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/genero"
            android:textSize="@dimen/tamanioLetra2"></TextView>

        <Spinner
            android:id="@+id/generoSp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            >

        </Spinner>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopBase"
        android:orientation="horizontal"
        android:background="@color/colorSecundary"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/valor"
            android:textSize="@dimen/tamanioLetra2"
            >

        </TextView>

        <EditText
            android:id="@+id/valorTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            >

        </EditText>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopBase"
        android:orientation="horizontal"
        android:background="@color/colorSecundary"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nota"
            android:textSize="@dimen/tamanioLetra2"
            android:gravity="center"
            android:layout_weight="1">

        </TextView>

        <Spinner
            android:id="@+id/notaSp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/marginTopBase">

        <Button
            android:id="@+id/agregarBtn"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorAccent"
            android:text="@string/agregarBtn"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/tamanioLetra2">

        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/marginTopBase">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:gravity="center"
            android:text="@string/lista"
            android:textSize="@dimen/tamanioLetra3"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/color3"
            android:background="@color/colorPrimary"

            ></TextView>

        <ListView
            android:id="@+id/eventosLv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            ></ListView>
    </LinearLayout>

</LinearLayout>